--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "ts-node src/index"
+        "start": "ts-node src/index",
+        "test": "jest"
     },
     "author": "",
     "license": "ISC",
@@ -15,7 +16,10 @@
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.1",
+        "@types/jest": "^26.0.8",
         "@types/node": "^14.0.27",
+        "jest": "^26.2.2",
+        "ts-jest": "^26.1.4",
         "ts-node": "^8.10.2",
         "typescript": "^3.9.7"
     }
